--- a/sass/respond/_catSearchSmall.scss
+++ b/sass/respond/_catSearchSmall.scss
@@ -6,10 +6,53 @@
         width: 100%;
         margin: 0;
         .container1 {
+            .selectForm {
+                width: 100%;
+                .formInsert {
+                    width: 100%;
+                    .searchBar {
+                        width: 80%;
+                        margin-left: 0;
+                    }
+                    .defaultBtn {
+                        padding: 4px 14px;
+                    }
+                }
+                .advanceSearch {
+                    right: 5%
+                }
+                #advanced:checked~div {
+                    height: 400px;
+                }
+                .advanceSearchItem {
+                    padding-left: 4px;
+                    padding-right: 4px;
+                    .condition {
+                        padding: 3px 8px;
+                        margin: 2px;
+                    }
+                }
+            }
             .catPic {
+                .sort {
+                    width: 100%;
+                    a {
+                        padding: 4px 20px;
+                        width: 140px;
+                        .fa-angle-down {
+                            position: absolute;
+                            line-height: 1.2em;
+                            right: 12px;
+                        }
+                    }
+                }
                 .catItem {
                     display: block;
-                    margin: 0 auto;
+                    margin: 0 auto 100px;
+                    .catContent,
+                    figure {
+                        display: inline-block;
+                    }
                 }
             }
         }
