--- a/css/halfway_house_search.css
+++ b/css/halfway_house_search.css
@@ -354,6 +354,7 @@ header ul li:nth-child(2):after {
   width: 70%;
   margin: auto;
   background-color: #FEF2E6;
+  box-shadow: 12px 10px 20px -10px #333;
   position: relative;
   top: 0;
   left: 0;
@@ -364,7 +365,7 @@ header ul li:nth-child(2):after {
   width: 160px;
   position: absolute;
   top: 60%;
-  left: 80%;
+  left: 70%;
 }
 
 .right .searchsection .dropholder {
@@ -650,15 +651,26 @@ header ul li:nth-child(2):after {
   background-color: #fff;
   font-size: 14px;
   line-height: 30px;
-  padding-left: 3%;
-  padding-bottom: 3%;
+  padding: 0 0 3% 5%;
   box-shadow: 12px 10px 20px -10px #333;
 }
 
 .right .item .text h3 {
   font-size: 24px;
-  padding-top: 8%;
+  padding: 8% 0;
   letter-spacing: 10px;
+}
+
+.right .item .text a {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 25px;
+  text-decoration: none;
+  color: #EAAF88;
+}
+
+.right .item .text a:hover {
+  color: #333;
 }
 
 .right .item .pic {
@@ -695,6 +707,16 @@ header ul li:nth-child(2):after {
 }
 
 @media all and (min-width: 768px) and (max-width: 991px) {
+  header {
+    display: none;
+  }
+  .right {
+    margin: 0;
+  }
+  .right .searchsection .flycat {
+    width: 100px;
+    top: 75%;
+  }
   .right .item {
     width: 80%;
     margin: 50px auto 180px auto;
@@ -729,11 +751,18 @@ header ul li:nth-child(2):after {
 }
 
 @media all and (max-width: 767px) {
+  header {
+    display: none;
+  }
+  .right {
+    margin: 0;
+  }
   .right .searchsection #selectBox {
     display: block;
   }
   .right #content,
-  .right .dropholder {
+  .right .dropholder,
+  .right .flycat {
     display: none;
   }
   .right .item {
