--- a/sass/index.scss
+++ b/sass/index.scss
@@ -5,6 +5,7 @@
 @import './mixins/_navNow.scss';
 @import 'base/_font.scss';
 @import 'modules/_btns.scss';
+@import './base/_btn.scss';
 @import './layout/_container.scss';
 @import 'modules/_footer.scss';
 @import './modules/_header.scss';
