--- a/css/index.css
+++ b/css/index.css
@@ -119,6 +119,57 @@ body {
   .btns .btn.youtube:hover {
     color: #fff; }
 
+.defaultBtn {
+  font-size: 16px;
+  border: #333 1px solid;
+  border-radius: 24px;
+  color: #333;
+  padding: 4px 30px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: .3s all; }
+  .defaultBtn:hover {
+    color: white;
+    background-color: #EAAF88;
+    border-color: #EAAF88; }
+
+.btn-more {
+  width: 160px;
+  text-align: center;
+  height: 40px;
+  line-height: 40px;
+  background-color: #fff;
+  text-decoration: none;
+  color: #333;
+  position: relative;
+  overflow: hidden;
+  z-index: 2;
+  font-family: notoSans_r; }
+  .btn-more:hover {
+    color: #fff; }
+  .btn-more:before {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    content: '';
+    position: absolute;
+    left: -100%;
+    background-color: transparent;
+    transition: .3s;
+    z-index: -1; }
+  .btn-more:hover:before {
+    left: 0;
+    background-color: #333; }
+  .btn-more:after {
+    margin-top: -7px;
+    width: 7px;
+    height: 13px;
+    background: url(../images/icon01.png) no-repeat right center;
+    position: absolute;
+    top: 50%;
+    right: 18px;
+    content: ""; }
+
 .container {
   max-width: 991px;
   margin: 0 auto; }
@@ -239,6 +290,16 @@ header {
   border: 2px solid #333;
   margin: 15px 0; }
 
+.more {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  height: 15vh;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
 .banner {
   margin-left: 200px;
   height: 100vh;
@@ -300,20 +361,18 @@ header {
   position: relative;
   background-image: url(../images/wood.jpg); }
   .pick-kit .pick-title {
-    height: 20vh;
+    height: 15vh;
     display: flex;
-    align-items: center; }
+    align-items: flex-start; }
     .pick-kit .pick-title h2 {
       height: 40px;
       line-height: 10px; }
   .pick-kit ul {
     width: 100%;
     position: absolute;
-    bottom: 0;
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    padding-bottom: 10vh; }
+    align-items: center; }
     .pick-kit ul li {
       width: 28%;
       float: left; }
@@ -369,7 +428,7 @@ header {
     height: 60px;
     background-color: rgba(0, 0, 0, 0.411);
     position: absolute;
-    top: 50vh;
+    top: 40vh;
     z-index: 666; }
     .pick-kit .arrow img {
       width: 100%;
@@ -382,9 +441,10 @@ header {
   background-image: url(../images/wood.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh; }
+  height: 100vh;
+  position: relative; }
   .half .half-title {
-    height: 20vh;
+    height: 10vh;
     display: flex;
     align-items: center; }
     .half .half-title h2 {
@@ -462,6 +522,18 @@ header {
         font-weight: bolder;
         padding: 15px;
         display: block; }
+
+.section {
+  position: relative; }
+  .section .quick-signUp {
+    height: 80vh;
+    width: 100%;
+    margin-left: 200px; }
+  .section footer {
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
 
 #loading {
   position: fixed;
