--- a/sass/respond/_catContentSmall.scss
+++ b/sass/respond/_catContentSmall.scss
@@ -50,6 +50,11 @@
                 width: 60%;
                 margin: 20px auto 0;
             }
+            .donateInfo{
+                #canvas{
+                    width: 100%;
+                }
+            }
             .introduction {
                 margin-top: 40px;
             }
