--- a/sass/base/_var.scss
+++ b/sass/base/_var.scss
@@ -2,89 +2,82 @@
 // Color
 // ----------------------------------------------------------------------
 //basic color
-$gray-base:              #333 !default;
-$gray-darker:            lighten($gray-base, 13.5%) !default; // #222
-$gray-dark:              lighten($gray-base, 20%) !default;   // #333
-$gray:                   lighten($gray-base, 33.5%) !default; // #555
-$gray-light:             lighten($gray-base, 46.7%) !default; // #777
-$gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
-
+$gray-base: #333 !default;
+$gray-darker: lighten($gray-base, 13.5%) !default; // #222
+$gray-dark: lighten($gray-base, 20%) !default; // #333
+$gray: lighten($gray-base, 33.5%) !default; // #555
+$gray-light: lighten($gray-base, 46.7%) !default; // #777
+$gray-lighter: lighten($gray-base, 93.5%) !default; // #eee
 //$brand-primary: #222;
 $brand-primary: #00FF00;
-
 // ** Background color for `<body>`.
-$body-bg:               #fff !default;
-
+$body-bg: #fff !default;
 // ** text color for `<body>`.
-$text-color:            $gray-dark !default;
-
+$text-color: $gray-dark !default;
 //** Global textual link color.
-$link-color:            $brand-primary !default;
-$link-hover-color:      darken($link-color, 15%) !default;
-
+$link-color: $brand-primary !default;
+$link-hover-color: darken($link-color, 15%) !default;
 //** Link hover decoration.
 $link-hover-decoration: underline !default;
-
 // other color
 $screenGreen: #00FF00;
 $screenGreen: #00FF00;
-
 // ----------------------------------------------------------------------
-	// Font Sizes
+// Font Sizes
 // ----------------------------------------------------------------------
-$font-size-base:          14px !default;
-$font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
-
-$font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
-$font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
-$font-size-h3:            ceil(($font-size-base * 1.7)) !default; // ~24px
-$font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-h5:            $font-size-base !default;
-$font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
-
+$font-size-base: 14px !default;
+$font-size-large: ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-small: ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-size-h1: floor(($font-size-base * 2.6)) !default; // ~36px
+$font-size-h2: floor(($font-size-base * 2.15)) !default; // ~30px
+$font-size-h3: ceil(($font-size-base * 1.7)) !default; // ~24px
+$font-size-h4: ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-h5: $font-size-base !default;
+$font-size-h6: ceil(($font-size-base * 0.85)) !default; // ~12px
 //** Unit-less `line-height` for use in components like buttons.
-$line-height-base:        1.428571429 !default; // 20/14
+$line-height-base: 1.428571429 !default; // 20/14
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
-$line-height-computed : floor(($font-size-base * $line-height-base)) !default; // ~20px
-
-
-
+$line-height-computed: floor(($font-size-base * $line-height-base)) !default; // ~20px
 // ----------------------------------------------------------------------
-	// Font Families
+// Font Families
 // ----------------------------------------------------------------------
 // $helvetica: Helvetica, Arial, sans-serif;
-$helvetica:               'Helvetica Neue', Helvetica, Arial, sans-serif !default;
-$font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
-$system:                  -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !default;
-
-
-
+$helvetica: 'Helvetica Neue',
+Helvetica,
+Arial,
+sans-serif !default;
+$font-family-serif: Georgia,
+"Times New Roman",
+Times,
+serif !default;
+$system: -apple-system,
+BlinkMacSystemFont,
+"Segoe UI",
+"Roboto",
+"Oxygen",
+"Ubuntu",
+"Cantarell",
+"Fira Sans",
+"Droid Sans",
+"Helvetica Neue",
+sans-serif !default;
 // ----------------------------------------------------------------------
-    // Grid
+// Grid
 // ----------------------------------------------------------------------
 $grid-columns: 12;
-
-
-
 // ----------------------------------------------------------------------
-	// Layout Breakpoints
+// Layout Breakpoints
 // ----------------------------------------------------------------------
 $maxWidth: 1024;
-
-
-
 // ----------------------------------------------------------------------
-    // Rwd
+// Rwd
 // ----------------------------------------------------------------------
-
 $small: 767px;
 $medium: 768px;
 $medium_max: 991px;
 $large: 1200px;
-
 //qq
 $gap: 15px;
-
 //header nav
-$navColor : #EAAF88;
+$navColor: #EAAF88;
+$color:#ffc8a3;
