--- a/css/catContent.css
+++ b/css/catContent.css
@@ -695,4 +695,14 @@ header ul li:nth-child(1):after {
   }
 }
 
+@media all and (max-width: 767px) {
+  footer {
+    margin-left: 0;
+    width: 100%;
+  }
+  footer span {
+    display: none;
+  }
+}
+
 /*# sourceMappingURL=catContent.css.map */
