--- a/css/Cat_ShoppingStore_food.css
+++ b/css/Cat_ShoppingStore_food.css
@@ -2,7 +2,15 @@ body{
 	letter-spacing: 3px;
 	background-color: #eee; 
 	font-size: 14px;
+	background-image: url(../img/marble.jpg);
 }
+
+@media only screen and (max-width: 768px){
+    header{
+        visibility: hidden;
+    }
+}
+
 .wrap{
 	margin-left: 200px;
 }
@@ -10,6 +18,16 @@ body{
 .wrapCenter{
 	width: 80%;
 	margin: auto;
+}
+
+@media only screen and (max-width: 768px){
+    .wrap{
+        margin-left: 0;
+    }
+
+    .wrapCenter{
+        width: 95%;
+	}
 }
 
 .title{
@@ -54,6 +72,12 @@ body{
 	display: inline-block;
 }
 
+@media only screen and (max-width: 768px){
+	.menuTitle{
+		display: block;
+	}
+}
+
 .banner{
 	/*background-color: #cfc;*/
 	width: 100%;
@@ -87,6 +111,18 @@ body{
 	margin-top: 1%;
 	text-align: center;
 	margin-bottom: 4%;
+}
+
+@media only screen and (max-width: 768px){
+	.product{
+		width: 50%;
+	}
+
+	.title span{
+		margin-top: 20px;
+		display: block;
+		font-size: 15px;
+	}
 }
 
 .pic:hover{
