吃吃教我幹大事

--- a/css/catContent.css
+++ b/css/catContent.css
@@ -308,7 +308,7 @@ header .icons a:hover {
 
 .defaultBtn {
   font-size: 16px;
-  border: #333 1px solid;
+  border: #333 2px solid;
   border-radius: 24px;
   color: #333;
   padding: 4px 30px;
@@ -701,7 +701,8 @@ header ul li:nth-child(1):after {
     width: 100%;
   }
   footer span {
-    display: none;
+    display: block;
+    text-align: center;
   }
 }
 
