--- a/sass/respond/_footerSmall.scss
+++ b/sass/respond/_footerSmall.scss
@@ -3,7 +3,8 @@
         margin-left: 0;
         width: 100%;
         span {
-            display: none;
+            display: block;
+            text-align: center;
         }
     }
 }
