--- a/sass/catSearch.scss
+++ b/sass/catSearch.scss
@@ -12,6 +12,10 @@
 @import "base/btn";
 @import "base/genderIcon";
 @include navNow(1);
+body {
+    background-image: url('../images/marble.jpg');
+}
+
 .right {
     width: calc(100% - 200px);
     margin-left: 200px;
@@ -92,6 +96,9 @@
             }
             .advanceSearchItem {
                 text-align: left;
+                label {
+                    font-family: '../fonts/NotoSansCJKtc-Regular.otf';
+                }
             }
             .selectTitle {
                 font-size: $font-size-base;
@@ -111,33 +118,55 @@
                 .searchBar {
                     width: 260px;
                     height: 30px;
-                    border-radius: 4px;
+                    border-radius: 100px;
+                    border: 2px solid black;
                     font-size: $font-size-base;
                     text-indent: 4px;
                     margin-right: 6px;
                     &:focus {
                         outline: none;
                     }
-                    &:-webkit-input-placeholder {
+                    &:-ms-input-placeholder {
                         font-size: $font-size-base;
                         line-height: 30px;
-                        text-align: center;
+                        letter-spacing: 4px;
+                        padding: 5px 15px;
+                    }
+                    &:-moz-placeholder {
+                        font-size: $font-size-base;
+                        line-height: 30px;
+                        letter-spacing: 4px;
+                        padding: 5px 15px;
+                    }
+                    &::-moz-placeholder {
+                        font-size: $font-size-base;
+                        line-height: 30px;
+                        letter-spacing: 4px;
+                        padding: 5px 15px;
+                    }
+                    &::-webkit-input-placeholder {
+                        font-size: $font-size-base;
+                        line-height: 30px;
+                        letter-spacing: 4px;
+                        padding: 5px 15px;
                     }
                 }
                 .condition {
                     padding: 5px 10px;
-                    border: 1px solid #ccc;
-                    background-color: transparent;
-                    color: #000000;
+                    border: 1px solid transparent;
+                    font-family: '../fonts/NotoSansCJKtc-Thin.otf';
+                    background-color: #fff;
+                    color: #333;
                     line-height: 20px;
                     border-radius: 4px;
                     cursor: pointer;
                     margin: 6px;
                     outline: none;
                     transition: .3s all;
+                    letter-spacing: 1.5px;
                     &:hover {
-                        background-color: #EAAF88;
-                        color: #fff;
+                        background-color: #fefefe;
+                        color: #EAAF88;
                         border: 1px solid #EAAF88;
                     }
                 }
@@ -145,8 +174,12 @@
                     margin-left: 20px;
                 }
                 .conditionSelected {
-                    background-color: #ff0000;
+                    background-color: #EAAF88;
                     color: #ffffff;
+                    border: 1px solid #EAAF88
+                }
+                .forRWD{
+                    display: none;
                 }
             }
         }
@@ -170,6 +203,9 @@
                         position: absolute;
                         line-height: 1.2em;
                         right: 20%;
+                    }
+                    &:first-child {
+                        margin-right: 10px;
                     }
                 }
             }
@@ -232,11 +268,11 @@
                     visibility: hidden;
                     height: 60px;
                     line-height: 60px;
-                    background: #1a4a72;
+                    background: #EAAF88;
                     opacity: 0;
-                    -webkit-transition: all 0.35s ease-in-out;
-                    -moz-transition: all 0.35s ease-in-out;
-                    transition: all 0.35s ease-in-out;
+                    -webkit-transition: all 0.3s ease-in-out;
+                    -moz-transition: all 0.3s ease-in-out;
+                    transition: all 0.3s ease-in-out;
                     -webkit-transform: translateY(100%);
                     -moz-transform: translateY(100%);
                     -ms-transform: translateY(100%);
@@ -269,6 +305,7 @@
             padding: 5px;
             text-align: center;
             .pageNo {
+                border-width: 1px;
                 border-radius: 0px;
                 padding: 2px;
                 padding-left: 5px;
