--- a/css/Cat_ShoppingStore.css
+++ b/css/Cat_ShoppingStore.css
@@ -3,7 +3,7 @@ body{
 	background-color: #eee; 
 	font-size: 14px;
 	background-image: url(../img/marble.jpg);
-	
+	line-height: 22px;
 }
 
 @media only screen and (max-width: 768px){
