--- a/css/footer.css
+++ b/css/footer.css
@@ -52,6 +52,9 @@ table {
   font-family: notoSans_b;
   src: url("../fonts/NotoSansCJKtc-Black.otf"); }
 
+input, select {
+  font-family: notoSans_r; }
+
 body {
   font-family: notoSans;
   letter-spacing: 3px; }
@@ -124,8 +127,7 @@ body {
   margin: 0 auto; }
 
 input, select {
-  outline: none;
-}
+  outline: none; }
 
 footer {
   background-color: #f5eae3;
