--- a/css/index.css
+++ b/css/index.css
@@ -52,6 +52,9 @@ table {
   font-family: notoSans_b;
   src: url("../fonts/NotoSansCJKtc-Black.otf"); }
 
+input, select {
+  font-family: notoSans_r; }
+
 body {
   font-family: notoSans;
   letter-spacing: 3px; }
@@ -212,7 +215,7 @@ footer {
     padding: 10px; }
 
 header {
-  background-color: #EAAF88;
+  background-color: #eaaf88;
   width: 200px;
   height: 100vh;
   position: fixed;
@@ -326,28 +329,28 @@ header {
   .banner .search {
     position: relative; }
     .banner .search select {
-      background-color: rgba(153, 153, 153, 0.493);
+      background-color: rgba(255, 255, 255, 0.308);
       border: 3px solid #fff;
       border-radius: 40px;
       text-align-last: center;
       padding: 10px 0;
       font-size: 18px;
-      color: #fff;
+      color: #333;
       cursor: pointer; }
     .banner .search input {
       margin: 15px auto;
-      background-color: rgba(153, 153, 153, 0.493);
+      background-color: rgba(255, 255, 255, 0.308);
       border: 3px solid #fff;
       letter-spacing: 2px;
       border-radius: 40px;
       padding: 10px 37.5px 10px 15px;
       font-size: 18px; }
       .banner .search input:-moz-placeholder {
-        color: #fff; }
+        color: #333; }
       .banner .search input::-webkit-input-placeholder {
-        color: #fff; }
+        color: #333; }
       .banner .search input:-ms-input-placeholder {
-        color: #fff; }
+        color: #333; }
     .banner .search .fa-search {
       color: #fff;
       position: absolute;
@@ -368,7 +371,7 @@ header {
       height: 40px;
       line-height: 10px; }
   .pick-kit ul {
-    width: 100%;
+    width: 200%;
     position: absolute;
     display: flex;
     justify-content: space-around;
@@ -402,18 +405,13 @@ header {
               .pick-kit ul li .cat_list_bg a .cat_list .bubble span {
                 display: block;
                 padding: 5px; }
-      .pick-kit ul li:nth-child(1) .cat_list_bg a .cat_list {
+      .pick-kit ul li:nth-child(odd) .cat_list_bg a .cat_list {
         background-image: url(../images/catcat_171225_0011.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center; }
-      .pick-kit ul li:nth-child(2) .cat_list_bg a .cat_list {
+      .pick-kit ul li:nth-child(even) .cat_list_bg a .cat_list {
         background-image: url(../images/catcat_171225_0010.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center; }
-      .pick-kit ul li:nth-child(3) .cat_list_bg a .cat_list {
-        background-image: url(../images/catcat_171228_0012.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center; }
@@ -542,7 +540,7 @@ header {
   width: 100%;
   height: 100vh;
   z-index: 999999999999999999999999999999;
-  background-color: rgba(44, 44, 44, 0.856);
+  background-color: #eaaf88;
   transition: .3s; }
   #loading #loadingCat {
     position: absolute;
