--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -37,7 +37,7 @@ header{
             a{
                 width: 185px;
                 display: block;
-                color:#fff;
+                color:$navFontColor;
                 text-decoration: none;
                 font-size: 18px;
                 padding: 15px 20px;
