--- a/sass/modules/_loading.scss
+++ b/sass/modules/_loading.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100vh;
     z-index: 999999999999999999999999999999;
-    background-color: rgba(44, 44, 44, 0.856);
+    background-color: #eaaf88;
     transition: .3s;
     #loadingCat{
         position: absolute;
