--- a/css/halfway_house_detail.css
+++ b/css/halfway_house_detail.css
@@ -52,6 +52,9 @@ table {
   font-family: notoSans_b;
   src: url("../fonts/NotoSansCJKtc-Black.otf"); }
 
+input, select {
+  font-family: notoSans_r; }
+
 body {
   font-family: notoSans;
   letter-spacing: 3px; }
@@ -69,18 +72,13 @@ body {
 input, select {
   outline: none; }
 
-input, select {
-  outline: none;
-}
-
 header {
-  background-color: #EAAF88;
+  background-color: #eaaf88;
   width: 200px;
   height: 100vh;
   position: fixed;
   padding-left: 15px;
   box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
-<<<<<<< HEAD
   z-index: 9999999; }
   header .logo {
     position: relative;
@@ -138,95 +136,10 @@ header {
       header .icons a:hover {
         transform: scale(1.15);
         transition: .3s; }
-=======
-  z-index: 9999999;
-}
-
-header .logo {
-  position: relative;
-  top: 70px;
-  width: 180px;
-  text-align: center;
-}
-
-header .logo a {
-  text-decoration: none;
-  color: #fff;
-}
-
-header .logo img {
-  width: 90%;
-}
-
-header ul {
-  position: absolute;
-  bottom: 180px;
-}
-
-header ul li {
-  margin: 1px 0;
-  position: relative;
-}
-
-header ul li:hover {
-  background-color: #fff;
-  box-shadow: -2px 3px 6px rgba(63, 62, 62, 0.397);
-  transition: .3s;
-}
-
-header ul li:hover a {
-  color: #000;
-  transition: .3s;
-}
-
-header ul li a {
-  width: 185px;
-  display: block;
-  color: #fff;
-  text-decoration: none;
-  font-size: 18px;
-  padding: 15px 20px;
-}
-
-header .icons {
-  width: 180px;
-  display: flex;
-  padding: 15px;
-  padding-right: 20px;
-  justify-content: space-around;
-  position: absolute;
-  bottom: 40px;
-}
-
-header .icons #like {
-  font-size: 12px;
-  text-align: center;
-  line-height: 20px;
-  display: block;
-  width: 15px;
-  height: 15px;
-  position: relative;
-  color: #d33;
-  top: -17px;
-  right: -25px;
-  font-family: notoSans_b;
-}
-
-header .icons a {
-  text-decoration: none;
-  color: #fff;
-}
-
-header .icons a:hover {
-  transform: scale(1.15);
-  transition: .3s;
-}
->>>>>>> 37fd8a0554be3360d82324919bb028d2d2975882
 
 footer {
   background-color: #f5eae3;
   margin-left: 200px;
-<<<<<<< HEAD
   padding: 15px; }
   footer .follow {
     padding: 15px;
@@ -257,53 +170,6 @@ footer {
     position: relative;
     top: -20px;
     padding: 10px; }
-=======
-  padding: 15px;
-}
-
-footer .follow {
-  padding: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-footer nav {
-  margin: auto;
-}
-
-footer nav ul {
-  display: flex;
-  justify-content: space-around;
-}
-
-footer nav ul li {
-  width: 20%;
-  margin: 15px;
-}
-
-footer nav ul li:hover {
-  transform: translateY(-3px);
-  transition: .35s;
-}
-
-footer nav ul li a {
-  text-align: center;
-  border: 1px solid #333;
-  text-decoration: none;
-  color: #333;
-  display: block;
-  width: 100%;
-  padding: 15px;
-}
-
-footer span {
-  display: inline-block;
-  position: relative;
-  top: -20px;
-  padding: 10px;
-}
->>>>>>> 37fd8a0554be3360d82324919bb028d2d2975882
 
 .btns .btn {
   font-size: 30px;
@@ -395,19 +261,19 @@ header ul li:nth-child(2):after {
   background-size: cover;
   position: relative;
   margin-left: 200px;
-<<<<<<< HEAD
-  padding-top: 50px; }
+  padding-top: 30px; }
   .right .banner {
     background-image: url(../../images/halfdetail1.jpg);
     background-position: 50%;
     background-repeat: no-repeat;
     width: 85%;
-    height: 480px;
+    padding-top: 35%;
     margin: auto;
     position: relative; }
     .right .banner h2 {
-      letter-spacing: 15px;
-      background-color: rgba(34, 103, 182, 0.7);
+      color: #333;
+      letter-spacing: 10px;
+      background-color: rgba(241, 209, 146, 0.815);
       color: #000;
       font-size: 30px;
       width: 30%;
@@ -415,31 +281,56 @@ header ul li:nth-child(2):after {
       position: absolute;
       top: -20px;
       left: 50%;
-      padding: 20px; }
+      line-height: 6vw; }
     .right .banner .intro {
-      width: 55%;
+      width: 70%;
       position: absolute;
-      top: 280px;
+      top: 55%;
       left: -3%;
       font-size: 14px;
       line-height: 2.0;
       padding: 20px;
-      background-color: rgba(35, 204, 204, 0.7);
+      background-color: rgba(241, 232, 214, 0.815);
       z-index: 1;
       color: #111; }
     .right .banner .contact {
       width: 35%;
       position: absolute;
-      top: 300px;
+      top: 25%;
       left: 70%;
       font-size: 14px;
-      line-height: 2.0;
+      line-height: 2.28571;
       padding: 20px;
-      background-color: rgba(0, 153, 102, 0.7);
+      background-color: rgba(241, 232, 214, 0.815);
       z-index: 1;
       color: #111; }
+    .right .banner .rating {
+      width: 35%;
+      position: absolute;
+      top: 90%;
+      left: 70%;
+      padding: 20px;
+      background-color: rgba(241, 209, 146, 0.815); }
+      .right .banner .rating:after {
+        content: '';
+        display: block;
+        clear: both; }
+      .right .banner .rating .star {
+        width: 60%;
+        float: left;
+        font-size: 18px; }
+        .right .banner .rating .star .fa-star {
+          color: #f3284a; }
+      .right .banner .rating .text {
+        width: 40%;
+        float: left;
+        text-align: center; }
+        .right .banner .rating .text span {
+          font-size: 27px; }
+  .right .smallintro {
+    display: none; }
   .right .halfwaypic {
-    margin: 50px auto; }
+    margin: 6% auto; }
     .right .halfwaypic .container {
       display: flex;
       justify-content: space-around; }
@@ -450,28 +341,30 @@ header ul li:nth-child(2):after {
           width: 100%; }
   .right .cat {
     background-image: url(../../images/catbg2.jpeg);
-    background-position: bottom 80%;
+    background-attachment: fixed;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
     overflow: hidden; }
     .right .cat .flycat {
-      width: 5%;
+      width: 70px;
       overflow: hidden;
       animation: aa 10s linear infinite; }
       .right .cat .flycat:nth-child(2) {
         position: absolute;
         top: -2%;
-        left: 10%; }
+        left: 5%; }
       .right .cat .flycat:nth-child(3) {
         position: absolute;
         top: -2%;
-        left: 85%; }
+        left: 90%; }
 
 @keyframes aa {
   100% {
     top: 100%; } }
     .right .cat h2 {
+      color: #333;
       font-weight: bold;
       letter-spacing: 15px;
       width: 90%;
@@ -481,30 +374,37 @@ header ul li:nth-child(2):after {
       font-size: 30px; }
     .right .cat .container {
       display: flex;
-      justify-content: space-around;
-      padding-bottom: 5%; }
-      .right .cat .container .threecat {
-        position: relative; }
-        .right .cat .container .threecat .favorite {
+      flex-wrap: wrap;
+      justify-content: space-around; }
+      .right .cat .container .catitem {
+        position: relative;
+        margin: 0 15px 30px 15px;
+        width: 25%; }
+        .right .cat .container .catitem .favorite {
           position: absolute;
-          top: 5px;
-          right: 33px;
+          top: 10px;
+          right: 10px;
           color: #fa3737;
           font-size: 30px;
           z-index: 3; }
-        .right .cat .container .threecat img {
-          width: 90%; }
-        .right .cat .container .threecat .text {
+        .right .cat .container .catitem img {
+          width: 100%; }
+        .right .cat .container .catitem .text {
           font-size: 14px;
-          line-height: 1.71429; }
-          .right .cat .container .threecat .text h3 {
+          line-height: 1.71429;
+          padding: 10px; }
+          .right .cat .container .catitem .text h3 {
             font-size: 24px;
             font-weight: bold; }
   .right .map {
-    width: 60%;
+    width: 80%;
     margin: auto;
     padding-bottom: 5%; }
+    .right .map #map {
+      width: 100%;
+      height: 450px; }
     .right .map h2 {
+      color: #333;
       font-weight: bold;
       width: 90%;
       letter-spacing: 15px;
@@ -516,9 +416,9 @@ header ul li:nth-child(2):after {
       width: 100%; }
   .right .talk {
     background-image: url(../../images/talk.jpg);
-    background-position: bottom;
+    background-attachment: fixed;
+    background-position: 20%;
     background-repeat: no-repeat;
-    background-size: cover;
     padding-bottom: 3%; }
     .right .talk .container {
       width: 70%;
@@ -528,6 +428,7 @@ header ul li:nth-child(2):after {
         display: block;
         clear: both; }
       .right .talk .container h2 {
+        color: #333;
         font-weight: bold;
         letter-spacing: 15px;
         width: 90%;
@@ -554,7 +455,6 @@ header ul li:nth-child(2):after {
           border-right: none;
           border-radius: 20px;
           color: #ddd;
-          min-height: 40px;
           position: relative;
           padding: 10px;
           font-size: 14px;
@@ -573,7 +473,7 @@ header ul li:nth-child(2):after {
           width: 12px;
           height: 12px;
           position: absolute;
-          background: #58a;
+          background: rgba(85, 136, 170, 0.692);
           transform: rotate(45deg);
           bottom: -12px;
           left: 100px; }
@@ -583,455 +483,107 @@ header ul li:nth-child(2):after {
           bottom: -7px;
           border-right: 1px dashed #fff;
           border-bottom: 1px dashed #fff; }
-=======
-  padding-top: 30px;
-}
-
-.right .banner {
-  background-image: url(../../images/halfdetail1.jpg);
-  background-position: 50%;
-  background-repeat: no-repeat;
-  width: 85%;
-  padding-top: 35%;
-  margin: auto;
-  position: relative;
-}
-
-.right .banner h2 {
-  color: #333;
-  letter-spacing: 10px;
-  background-color: rgba(241, 209, 146, 0.815);
-  color: #000;
-  font-size: 30px;
-  width: 30%;
-  text-align: center;
-  position: absolute;
-  top: -20px;
-  left: 50%;
-  line-height: 6vw;
-}
-
-.right .banner .intro {
-  width: 70%;
-  position: absolute;
-  top: 55%;
-  left: -3%;
-  font-size: 14px;
-  line-height: 2.0;
-  padding: 20px;
-  background-color: rgba(241, 232, 214, 0.815);
-  z-index: 1;
-  color: #111;
-}
-
-.right .banner .contact {
-  width: 35%;
-  position: absolute;
-  top: 25%;
-  left: 70%;
-  font-size: 14px;
-  line-height: 2.28571;
-  padding: 20px;
-  background-color: rgba(241, 232, 214, 0.815);
-  z-index: 1;
-  color: #111;
-}
-
-.right .banner .rating {
-  width: 35%;
-  position: absolute;
-  top: 90%;
-  left: 70%;
-  padding: 20px;
-  background-color: rgba(241, 209, 146, 0.815);
-}
-
-.right .banner .rating:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-
-.right .banner .rating .star {
-  width: 60%;
-  float: left;
-  font-size: 18px;
-}
-
-.right .banner .rating .star .fa-star {
-  color: #f3284a;
-}
-
-.right .banner .rating .text {
-  width: 40%;
-  float: left;
-  text-align: center;
-}
-
-.right .banner .rating .text span {
-  font-size: 27px;
-}
-
-.right .smallintro {
-  display: none;
-}
-
-.right .halfwaypic {
-  margin: 6% auto;
-}
-
-.right .halfwaypic .container {
-  display: flex;
-  justify-content: space-around;
-}
-
-.right .halfwaypic .container .picture {
-  width: 25%;
-  margin: 0 10px;
-}
-
-.right .halfwaypic .container .picture img {
-  width: 100%;
-}
-
-.right .cat {
-  background-image: url(../../images/catbg2.jpeg);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  overflow: hidden;
-}
-
-.right .cat .flycat {
-  width: 70px;
-  overflow: hidden;
-  animation: aa 10s linear infinite;
-}
-
-.right .cat .flycat:nth-child(2) {
-  position: absolute;
-  top: -2%;
-  left: 5%;
-}
-
-.right .cat .flycat:nth-child(3) {
-  position: absolute;
-  top: -2%;
-  left: 90%;
-}
-
-@keyframes aa {
-  100% {
-    top: 100%;
-  }
-}
-
-.right .cat h2 {
-  color: #333;
-  font-weight: bold;
-  letter-spacing: 15px;
-  width: 90%;
-  margin: auto;
-  padding: 5%;
-  text-align: center;
-  font-size: 30px;
-}
-
-.right .cat .container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.right .cat .container .catitem {
-  position: relative;
-  margin: 0 15px 30px 15px;
-  width: 25%;
-}
-
-.right .cat .container .catitem .favorite {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  color: #fa3737;
-  font-size: 30px;
-  z-index: 3;
-}
-
-.right .cat .container .catitem img {
-  width: 100%;
-}
-
-.right .cat .container .catitem .text {
-  font-size: 14px;
-  line-height: 1.71429;
-  padding: 10px;
-}
-
-.right .cat .container .catitem .text h3 {
-  font-size: 24px;
-  font-weight: bold;
-}
-
-.right .map {
-  width: 80%;
-  margin: auto;
-  padding-bottom: 5%;
-}
-
-.right .map #map {
-  width: 100%;
-  height: 450px;
-}
-
-.right .map h2 {
-  color: #333;
-  font-weight: bold;
-  width: 90%;
-  letter-spacing: 15px;
-  margin: auto;
-  padding: 5%;
-  text-align: center;
-  font-size: 30px;
-}
-
-.right .map img {
-  width: 100%;
-}
-
-.right .talk {
-  background-image: url(../../images/talk.jpg);
-  background-attachment: fixed;
-  background-position: 20%;
-  background-repeat: no-repeat;
-  padding-bottom: 3%;
-}
-
-.right .talk .container {
-  width: 70%;
-  margin: 0 auto;
-}
-
-.right .talk .container:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-
-.right .talk .container h2 {
-  color: #333;
-  font-weight: bold;
-  letter-spacing: 15px;
-  width: 90%;
-  margin: auto;
-  padding: 5%;
-  text-align: center;
-  font-size: 30px;
-}
-
-.right .talk .container .article {
-  padding: 5px;
-  margin-bottom: 5%;
-  width: 55%;
-  float: left;
-  background: rgba(85, 136, 170, 0.788);
-  border-radius: 20px;
-}
-
-.right .talk .container .article:nth-child(3), .right .talk .container .article:nth-child(5) {
-  float: right;
-}
-
-.right .talk .container .article h3 {
-  font-size: 24px;
-  color: #EAAF88;
-  padding: 10px;
-}
-
-.right .talk .container .article p {
-  border: 1px dashed #fff;
-  border-left: none;
-  border-right: none;
-  border-radius: 20px;
-  color: #ddd;
-  position: relative;
-  padding: 10px;
-  font-size: 14px;
-  line-height: 1.42857;
-}
-
-.right .talk .container .article p a {
-  display: flex;
-  justify-content: flex-end;
-  text-decoration: none;
-  color: #EAAF88;
-}
-
-.right .talk .container .article p a:hover {
-  color: #ddd;
-}
-
-.right .talk .container .article p:before,
-.right .talk .container .article p:after {
-  content: "";
-  display: block;
-  width: 12px;
-  height: 12px;
-  position: absolute;
-  background: rgba(85, 136, 170, 0.692);
-  transform: rotate(45deg);
-  bottom: -12px;
-  left: 100px;
-}
-
-.right .talk .container .article p:after {
-  height: 10px;
-  width: 10px;
-  bottom: -7px;
-  border-right: 1px dashed #fff;
-  border-bottom: 1px dashed #fff;
-}
 
 @media all and (min-width: 768px) and (max-width: 991px) {
   header {
-    display: none;
-  }
+    display: none; }
   .right {
     padding: 0;
-    margin: 0;
-  }
-  .right .banner {
-    width: 100%;
-    padding-top: 80vh;
-    animation: bb 20s linear infinite;
-  }
-  .right .banner h2 {
-    top: 3%;
-    left: 3%;
-    width: 60%;
-    line-height: 8vw;
-  }
-  .right .banner .intro {
-    display: none;
-  }
-  .right .banner .contact {
-    width: 60%;
-    top: 30vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-  }
-  .right .banner .rating {
-    width: 60%;
-    top: 55vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-  }
+    margin: 0; }
+    .right .banner {
+      width: 100%;
+      padding-top: 80vh;
+      animation: bb 20s linear infinite; }
+      .right .banner h2 {
+        top: 3%;
+        left: 3%;
+        width: 60%;
+        line-height: 8vw; }
+      .right .banner .intro {
+        display: none; }
+      .right .banner .contact {
+        width: 60%;
+        top: 30vh;
+        left: 0;
+        right: 0;
+        margin: auto; }
+      .right .banner .rating {
+        width: 60%;
+        top: 55vh;
+        left: 0;
+        right: 0;
+        margin: auto; }
   @keyframes bb {
     20% {
-      background-image: url(../images/halfdetail7_resized.jpg);
-    }
+      background-image: url(../images/halfdetail7_resized.jpg); }
     40% {
-      background-image: url(../images/halfdetail5.jpg);
-    }
+      background-image: url(../images/halfdetail5.jpg); }
     60% {
-      background-image: url(../images/halfdetail6.jpg);
-    }
+      background-image: url(../images/halfdetail6.jpg); }
     80% {
-      background-image: url(../images/halfdetail4.jpg);
-    }
-  }
-  .right .smallintro {
-    display: block;
-    background-color: #F1E8D6;
-    padding: 30px 30px;
-    font-size: 14px;
-    line-height: 2.0;
-  }
-  .right .halfwaypic {
-    display: none;
-  }
-  .right .cat .flycat {
-    display: none;
-  }
-  .right .cat .container .catitem {
-    width: 40%;
-  }
-  .right .talk .container .article {
-    width: 100%;
-    float: left;
-    margin-bottom: 10%;
-  }
-}
+      background-image: url(../images/halfdetail4.jpg); } }
+    .right .smallintro {
+      display: block;
+      background-color: #F1E8D6;
+      padding: 30px 30px;
+      font-size: 14px;
+      line-height: 2.0; }
+    .right .halfwaypic {
+      display: none; }
+    .right .cat .flycat {
+      display: none; }
+    .right .cat .container .catitem {
+      width: 40%; }
+    .right .talk .container .article {
+      width: 100%;
+      float: left;
+      margin-bottom: 10%; } }
 
 @media all and (max-width: 767px) {
   header {
-    display: none;
-  }
+    display: none; }
   .right {
     padding: 0;
-    margin: 0;
-  }
-  .right .banner {
-    width: 100%;
-    padding-top: 80vh;
-    animation: bb 20s linear infinite;
-  }
-  .right .banner h2 {
-    top: 3%;
-    left: 3%;
-    width: 60%;
-    line-height: 8vw;
-  }
-  .right .banner .intro {
-    display: none;
-  }
-  .right .banner .contact {
-    width: 60%;
-    top: 30vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-  }
-  .right .banner .rating {
-    width: 60%;
-    top: 55vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-  }
+    margin: 0; }
+    .right .banner {
+      width: 100%;
+      padding-top: 80vh;
+      animation: bb 20s linear infinite; }
+      .right .banner h2 {
+        top: 3%;
+        left: 3%;
+        width: 60%;
+        line-height: 8vw; }
+      .right .banner .intro {
+        display: none; }
+      .right .banner .contact {
+        width: 60%;
+        top: 30vh;
+        left: 0;
+        right: 0;
+        margin: auto; }
+      .right .banner .rating {
+        width: 60%;
+        top: 55vh;
+        left: 0;
+        right: 0;
+        margin: auto; }
   @keyframes bb {
     20% {
-      background-image: url(../images/halfdetail7_resized.jpg);
-    }
+      background-image: url(../images/halfdetail7_resized.jpg); }
     40% {
-      background-image: url(../images/halfdetail5.jpg);
-    }
+      background-image: url(../images/halfdetail5.jpg); }
     60% {
-      background-image: url(../images/halfdetail6.jpg);
-    }
+      background-image: url(../images/halfdetail6.jpg); }
     80% {
-      background-image: url(../images/halfdetail4.jpg);
-    }
-  }
-  .right .halfwaypic {
-    display: none;
-  }
-  .right .cat .flycat {
-    display: none;
-  }
-  .right .cat .container .catitem {
-    width: 50%;
-  }
-  .right .talk .container .article {
-    width: 100%;
-    float: left;
-    margin-bottom: 10%;
-  }
-}
-
-/*# sourceMappingURL=halfway_house_detail.css.map */
->>>>>>> 37fd8a0554be3360d82324919bb028d2d2975882
+      background-image: url(../images/halfdetail4.jpg); } }
+    .right .halfwaypic {
+      display: none; }
+    .right .cat .flycat {
+      display: none; }
+    .right .cat .container .catitem {
+      width: 50%; }
+    .right .talk .container .article {
+      width: 100%;
+      float: left;
+      margin-bottom: 10%; } }
