--- a/css/number.css
+++ b/css/number.css
@@ -3,48 +3,53 @@
 }
 
 .stage-1-icon {
-    width: 100px;
+    width: 40px;
     height: 50px;
-    margin: 0 auto 68px;
+    margin: 0 auto 30px;
     position: relative;
-    -webkit-perspective: 900px
+    -webkit-perspective: 900px;
+    background-size: cover;
 }
 
 .stage-1-icon-top,
 .stage-1-icon-bottom {
-    width: 72px;
+    width: 36px;
     position: absolute;
     left: 0 ;
     background-repeat: no-repeat;
-    -webkit-transform-style: preserve-3d
+    -webkit-transform-style: preserve-3d;
+    background-size: cover;
 }
 
 .stage-1-icon-top {
-    height: 64px;
+    height: 30px;
     top: 0;
     background-position: center top;
     -webkit-transform-origin: center bottom;
     -moz-transform-origin: center bottom;
     -ms-transform-origin: center bottom;
     -o-transform-origin: center bottom;
-    transform-origin: center bottom
+    transform-origin: center bottom;
+    background-size: cover;
 }
 
 .stage-1-icon-bottom {
-    height: 65px;
-    top: 64px;
-    background-position: center -64px;
+    background-size: cover;
+    height: 30px;
+    top: 30px;
+    background-position: center -30px;
     -webkit-transform-origin: center top;
     -moz-transform-origin: center top;
     -ms-transform-origin: center top;
     -o-transform-origin: center top;
-    transform-origin: center top
+    transform-origin: center top;
 }
 
 .stage-1-icon-0 .stage-1-icon-top,
 .stage-1-icon-0 .stage-1-icon-bottom {
     z-index: 10;
-    background-image: url(../images/number0.png)
+    background-image: url(../images/number0.png);
+    background-repeat: no-repeat;
 }
 
 .stage-1-icon-1 .stage-1-icon-top,
