--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -38,6 +38,10 @@
         padding: $gap;
         font-weight: bolder;
         font-size: $font-size-large;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         img {
             width: 40px;
             height: 55px;
